Restriccion a solo listar bonds en MXN
Tiempo aprox: 1 hora
